--- a/celery-conf/supervisord.conf
+++ b/celery-conf/supervisord.conf
@@ -21,7 +21,7 @@ file=/tmp/supervisor.sock   ; (the path to the socket file)
 [inet_http_server]         ; inet (TCP) server disabled by default
 port=*:9001        ; (ip_address:port specifier, *:port for all iface)
 username=admin              ; (default is no username (open server))
-password=123               ; (default is no password (open server))
+password=password               ; (default is no password (open server))
 
 [supervisord]
 logfile=/tmp/supervisord.log ; (main log file;default $CWD/supervisord.log)
@@ -149,9 +149,9 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 [program:ansible_celeryd]
 autorestart = true
 stopwaitsecs = 600
-#command = /yourvirtualenv/bin/python /ansible_ui_dir/manage.py celeryd -B -l info --autoscale=20,2 --concurrency=20
-command = /yourvirtualenv/bin/python /ansible_ui_dir/manage.py celeryd -B -l info
-user = ansible
+#command = /home/ansible_ui/bin/python /ansible_ui_dir/manage.py celeryd -B -l info --autoscale=20,2 --concurrency=20
+command = /home/ansible_ui/ansible_ui_env/bin/python /opt/ansible_ui/manage.py celeryd -B -l info
+user = ansible_ui
 autostart = true
 log_stdout = true
 log_stderr = true
