--- a/celery-conf/supervisord.conf
+++ b/celery-conf/supervisord.conf
@@ -150,8 +150,8 @@ serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
 autorestart = true
 stopwaitsecs = 600
 #command = /home/ansible_ui/bin/python /ansible_ui_dir/manage.py celeryd -B -l info --autoscale=20,2 --concurrency=20
-command = /Users/Firxiao/virtualenv/ansibleweb/bin/python /Users/Firxiao/PycharmProjects/ansible_ui/manage.py celeryd -B -l info
-user = Firxiao
+command = /home/ansible_ui/ansible_ui_env/bin/python /opt/ansible_ui/manage.py celeryd -B -l info
+user = ansible_ui
 autostart = true
 log_stdout = true
 log_stderr = true
